--- a/app/styles/Home.module.scss
+++ b/app/styles/Home.module.scss
@@ -16,6 +16,15 @@
   align-items: center;
 }
 
+.header {
+  width: 100%;
+  height: 100px;
+  border: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer {
   width: 100%;
   height: 100px;
